--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,8 @@ h2{
 }
 @media (width>1025px){
     #sobre-mi img{
-        height: 25rem;
-        width: 25rem;
+        height: 22rem;
+        width: 22rem;
         padding: 1.5rem;
         
         
@@ -245,8 +245,28 @@ h2{
 footer{
     background-color: var(--color-negro);
     height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 2rem 3rem;
+    height: auto;
 }
-footer span{
+footer img{
+    cursor: pointer;
+    height: 60px;
+}
+footer img:hover{
+    transform: translateY(-5px);
+    transition: all 0.5s ;
+}
+footer p{
     color: var(--color-blanco);
-    
+    opacity: 0.75;
+}
+footer hr{
+    width: 50vw;
+    margin-bottom: 20px;
+    opacity: 0.25;
+
 }
