--- a/styles.css
+++ b/styles.css
@@ -244,9 +244,21 @@ h2{
     font-size: 30px;
     font-weight: 900;
 }
-.h-container{
+#habilidades p{
+     margin: 2rem 0;
     text-align: center;
     font-size: medium;
+}
+.h-container{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    font-size: medium;
+    align-items: center;
+    gap: 2rem;
+}
+.h-container img{
+    height: 50px;
 }
 #proyectos{
     background-color: var(--color-primario);
